f(report) fix methodology

--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -172,7 +172,7 @@ The Servo motor \textbf{TowerPro MG995} is suitable for this project. The specif
 Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
 
 The previous servos used for the project were SG5010 which proved not to be able to handle the torque requirements of the platform,
-as a result the gears in those servos destroyed. The replacement of the servos with MG995 solved the problem due to the higher torque capacity.
+as a result the plastic gears in those servos were destroyed. The replacement of the servos with MG995 solved the problem due to the higher torque capacity and has metal gears.
 
 \subsubsection{Finite Element Analysis}
 A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
@@ -271,9 +271,9 @@ The smoke emitting holes are 6mm in diameter and the air inlet holes are 5mm in 
 20mm diameter hole on the lid (color coded red) shown in the  plan view is for metal pipe connection.
 
 \subsubsection*{Smoke Rake and Pipe Assembly}
-A metal pipe is used to provide rigid support to the smoke rake in the wind tunnel as well as placing it at the center
-(vertically). A pipe of length 40mm and diameter 3/4"(19.05mm) is used. The pipe surface is roughed using a hacksaw in
-order to minimize any turbulence in the flow since it will be placed in the intake section. A plate of 10mm by 10mm by 1.5mm
+A metal pipe was used to provide rigid support to the smoke rake in the wind tunnel as well as placing it at the center
+(vertically). A pipe of length 40mm and diameter 3/4"(19.05mm) is used. The pipe surface was roughed using a hacksaw in
+order to minimize any turbulence in the flow since it was be placed in the intake section. A plate of 10mm by 10mm by 1.5mm
 and two plumbing nuts are required to mount the pipe in the intake section. The smoke rake and pipe design is shown
 in figure \ref{pipe and rake}
 \begin{center}
@@ -289,7 +289,7 @@ and the pipe will be held fast to the floor by two plumbing nuts on both sides o
 the floor by use of M6 bolts and nuts.
 \subsection{Instrumentation}
 \subsubsection{Design of the Force Sensor}
-The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
+The force sensor module was used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
 \begin{itemize}
 	\item External force sensor
 	\item Stewart Platform as a force sensor
@@ -340,18 +340,14 @@ Where
 	\item H - transformation matrix which relates measured forces and applied forces
 	\item F - axial force
 \end{itemize}
-The derivation has been done and is presented in the appendix.
+The derivation has been done and is presented in the appendix A.4.
 
 \subsubsection*{Bonding strain gauges}
-The bonding of the strain gauges to the rods followed the following process:
-\begin{itemize}
-	\item Roughing of boding surface using sand paper
-	\item Cleaning bonding surface using acetone
-	\item Apply super glue to bonding surface and bond the strain gauge to the rod
-	\item Apply resin (araldite) on the bonded strain gauge to protect the strain gauge from damage
-	\item Solder jumper wires to the leads on the strain gauge as shown in \ref{fig:strain_bond}.
-	\item Finally cover the assembly with heat shrinkable tubing
-\end{itemize}
+The strain gauge bonding process began by roughing the bonding surface on the aluminium tubes using sand paper. 
+The surface was then cleaned using acetone. Superglue was when applied on the surface followed by the strain gauge while applying pressure on the strain gauge. 
+Resin (araldite) was then placed on the strain gauge to provide protection to strain gauge from mechanical damage. 
+Jumper wires were then soldered onto the lead wires of the strain gauge as shown in \ref{fig:strain_bond}. 
+Finally, the assembly was covered with heat shrinkable tubing.
 \begin{center}
 	\begin{figure}[H]
 		\centering
