fix report results

--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -6,7 +6,7 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 \begin{center}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.6\linewidth]{Figures/stew_asm.jpg}
+		\includegraphics[width=1\linewidth]{Figures/Assembly.JPG}
 		\caption[Assembled Platform]{Assembly of Stewart Platform}
 		\label{fig}
 	\end{figure}
