--- a/interim-report/Files/Abstract.tex
+++ b/interim-report/Files/Abstract.tex
@@ -14,6 +14,8 @@ The human machine interface dashboard was also created to allow interaction with
 Finally, an already existing model was tested in the wind tunnel to evaluate the performance
 of the platform. The platform was able to position the test
 item and measure aerodynamic loads while pitot tubes were positioned in the wind tunnel to measure air velocity.
+Further, a smoke visualization assembly was incorporated into the wind tunnel to improve visualization of the model 
+interaction with the airflow.
  Data logging of the obtained measurements will be done using a bespoke computer program for further analysis.
 
 
