--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -137,6 +137,8 @@
 \clearpage
 \input{Files/Abstract}
 \clearpage
+\input{Files/Acknowledgment}
+\clearpage
 \addcontentsline{toc}{section}{Table of Contents}
 \tableofcontents
 \clearpage
