--- a/Final Report/Files/Acknowledgment.tex
+++ b/Final Report/Files/Acknowledgment.tex
@@ -1,5 +1,10 @@
 \addcontentsline{toc}{section}{Acknowledgment}
 \section*{Acknowledgment}
-Bla\ldots bla\ldots
+We would like to thank the department of Mechatronic Engineering in JKUAT and in
+particular Dr. Anthony K. Muchiri for the opportunity to work on the Stewart platform
+force balance project and with the low-speed wind tunnel at Fluids Lab. We also acknowledge
+the immense support of our supervisors i.e. Dr. Muchiri and Ms. Mourine
+Andanje as well as our technologist, Mr. Mbugua, towards the achievement of the project
+objectives.
 
 
