--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -152,6 +152,8 @@
 \clearpage
 \input{Files/Abstract}
 \clearpage
+\input{Files/Acknowledgment}
+\clearpage
 \addcontentsline{toc}{section}{Table of Contents}
 \tableofcontents
 \clearpage
