--- a/Final Report/Files/Abstract.tex
+++ b/Final Report/Files/Abstract.tex
@@ -3,14 +3,19 @@
 
 \section*{Abstract}
 \label{sec:Abstract}
-Aerodynamic analysis of the performance of models within a wind tunnel is an important step in the design and development of vehicles and aircraft. Wind tunnel testing provides a verification means for data collected from simulations.
-There is a need to orient models during testing, which is accomplished in this project by the use of a stewart platform.
+Aerodynamic analysis of the performance of models within a wind tunnel is an important step in the design and development of vehicles and aircraft. Wind tunnel testing provides a way of verifying data collected from simulations.
+There is, however, need to orient models during testing, which is accomplished in this project by the use of a Stewart platform.
 
-The force balance developed based on the stewart platform was designed to orient models with six degrees of freedom based on inverse kinematics.
-The force balance was also designed to measure 6 components of forces and moments based on strain gauge sensors.
-A human machine interface dashboard was also created to allow interaction with the platform. A printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were created using Autodesk Inventor to show the configuration allowing for six degrees based on the inverse kinematic equations.
-A smoke distribution device was also developed to aid in visualizing air flow. Pitot tubes were also used to measure air velocity.
+The Stewart platform force balance was designed to orient models with six degrees of freedom based on inverse kinematics
+as well as to measure 6 components of forces and moments based on strain gauge sensors. 
+A human machine interface dashboard was consequently created to allow control of the platform orientation and display of measurement results. Three dimensional models of the platform were created using Autodesk Inventor to show the configuration allowing for six degrees based on the inverse kinematic equations. 
+Additonally, pitot tubes were setup in different locations in the wind tunnel and were used measure air velocity. Further,
+a smoke distribution assembly was incorporated in the wind tunnel to aid in visualizing the interaction
+of test models with the airflow. A printed circuit board to be used was also designed using Easy EDA and was fabricated. 
 
-The force balance was tested in the wind tunnel with a model aerofoil. The dashboard was able to control the stewart platform orientation.
-Data collection on the strain and air velocity was achieved during the test. The forces and moments obtained through a force transformation matrix from the strain data collected. The smoke visualization device also improved flow visibility.
+
+The force balance ws tested in the wind tunnel with a model aerofoil to verify its operation. Durng the test,
+the platform orientation could be controlled via the dashboard, measurements were obtained and use of smoke 
+streamlines improved visualization of model interaction with the airflow.
+
 
