--- a/Final Report/Files/Declaration.tex
+++ b/Final Report/Files/Declaration.tex
@@ -16,8 +16,8 @@ Approved by supervisors:
 	      Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
 	      %\item Prof. George N. Nyakoe\vspace*{.2cm}\\
 	      %Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
-	\item Ms. Maurine Andanje\vspace*{.2cm}\\
-	      Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
+	%\item Ms. Maurine Andanje\vspace*{.2cm}\\
+	      %Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
 \end{enumerate}
 
 
