--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -130,8 +130,8 @@
     \large{\textbf{Supervisors}}\\
     \large{Dr. Anthony K. Muchiri
     }\\
-    \large{Ms. Maurine N. Andanje
-    }\\
+    %\large{Ms. Maurine N. Andanje
+    %}\\
     \large{\textbf{Technologist}}\\
     \large{Mr. J Mbugua
     }\\
