More CFD parameters

--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -243,12 +243,23 @@ will have on the flow in the tunnel. The test was done using ANSYS.
 		\hline
 		\textbf{Parameter} & \textbf{Value/Type} \\
 		\hline
-		Type of test       & Fluid flow          \\
+		Type of test       & Fluid flow (Fluent)         \\
+		\hline
+		Type of Simulation & Steady State\\
 		\hline
 		Type of fluid      & air                 \\
 		\hline
-		Velocity           & 10 - 50 m/s         \\
+		Mesh size      &  0.001mm            \\
 		\hline
+		Growth rate     & default (1.2)             \\
+		\hline
+		Behavior  & soft             \\
+		\hline
+		Defeature size      & 5.5902 e-004m               \\
+		\hline
+		Velocity           & 10 - 40 m/s         \\
+		\hline
+
 	\end{tabular}
 \end{center}
 The speed of air flow in the wind tunnel is variable thus the simulation using speed between 10m/s and 50 m/s
