--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -175,7 +175,7 @@ The previous servos used for the project were SG5010 which proved not to be able
 as a result the plastic gears in those servos were destroyed. The replacement of the servos with MG995 solved the problem due to the higher torque capacity and has metal gears.
 
 \subsubsection{Finite Element Analysis}
-A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
+A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N was selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
 The mesh generated is shown in the figure \ref{fig:feamesh}.
 \begin{center}
 	\begin{figure}[H]
@@ -185,7 +185,7 @@ The mesh generated is shown in the figure \ref{fig:feamesh}.
 		\label{fig:feamesh}
 	\end{figure}
 \end{center}
-The rods/legs of the Stewart platform are subjected to axial forces which cause slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
+The rods/legs of the Stewart platform were subjected to axial forces which caused slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
 \clearpage
 \begin{center}
 	\begin{table}[H]
@@ -262,18 +262,18 @@ will have on the flow in the tunnel. The test was done using ANSYS.
 
 	\end{tabular}
 \end{center}
-The speed of air flow in the wind tunnel is variable thus the simulation using speed between 10m/s and 50 m/s
-in steps of 10 m/s.
+The speed of air flow in the wind tunnel is variable thus the simulation was done 
+using speeds between 10m/s and 40 m/s in steps of 10 m/s.
 
 \subsubsection{Smoke Visualization System}
 To implement streamline smoke lines in the wind tunnel, a smoke rake, which is an aerodynamically shaped
-body (typically elliptical) featuring a row of tubes through which the smoke exits was designed.
+body (usually elliptical) featuring a row of tubes through which the smoke exits was designed.
 The CAD model was deigned using Autodesk Inventor and the rake was prepared for 3D printing at iPIC
 in JKUAT. The rake design is shown in figure \ref{smoke}.
 \begin{center}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.7\linewidth]{Figures/smoke and rake.JPG}
+		\includegraphics[width=0.9\linewidth]{Figures/smoke and rake.JPG}
 		\caption[Smoke Rake]{Smoke rake design}
 		\label{smoke}
 	\end{figure}
@@ -283,8 +283,8 @@ The smoke emitting holes are 6mm in diameter and the air inlet holes are 5mm in 
 
 \subsubsection*{Smoke Rake and Pipe Assembly}
 A metal pipe was used to provide rigid support to the smoke rake in the wind tunnel as well as placing it at the center
-(vertically). A pipe of length 40mm and diameter 3/4"(19.05mm) is used. The pipe surface was roughed using a hacksaw in
-order to minimize any turbulence in the flow since it was be placed in the intake section. A plate of 10mm by 10mm by 1.5mm
+(vertically). A pipe of length 400mm and diameter 3/4"(19.05mm) is used. The pipe surface was roughed using a hacksaw in
+order to minimize any turbulence in the flow since it was be placed in the intake section. A 1.5mm plate of 10mm by 10mm by
 and two plumbing nuts are required to mount the pipe in the intake section. The smoke rake and pipe design is shown
 in figure \ref{pipe and rake}
 \begin{center}
@@ -295,12 +295,14 @@ in figure \ref{pipe and rake}
 		\label{pipe and rake}
 	\end{figure}
 \end{center}
-For the complete assembly, a 20mm diameter hole will be drilled on the floor of the wind tunnel at the intake section
-and the pipe will be held fast to the floor by two plumbing nuts on both sides of a 1.5mm plate. The plate will be fastened to
+For the complete assembly, a 20mm diameter hole was drilled on the floor of the wind tunnel at the intake section
+and the pipe was held fast to the floor by two plumbing nuts on both sides of the 1.5mm plate. The plate was fastened to
 the floor by use of M6 bolts and nuts.
 \subsection{Instrumentation}
 \subsubsection{Design of the Force Sensor}
-The force sensor module was used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
+The force sensor module was used to measure the force and moments from the aerodynamic loads applied on model 
+being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as
+ associated moments. For this subsystem two possible conceptual designs were considered:
 \begin{itemize}
 	\item External force sensor
 	\item Stewart Platform as a force sensor
@@ -317,7 +319,8 @@ In this case it would require at least 3 orthogonally positioned load cells meas
 \end{center}
 This configuration is, however, bulky since it requires an additional external system for force measurements in addition to the Stewart platform for positioning the model. This is however complemented by the simplicity in calibration of the load cells and does not require a complex force transformation matrix and other issues with force amplification created by the use of an integrated system.
 \subsubsection*{Stewart Platform as a force sensor}
-In this configuration the Stewart platform legs are used as force sensors by attaching strain gauges on the legs of platform. Similar work has been done by \cite{ferreira2015design} without the use of actuators as is proposed in this project. Using the Stewart platform as a force sensor requires the actuators to be locked with zero degrees of freedom.
+In this configuration, the Stewart platform legs are used as force sensors by attaching strain gauges on the 
+legs of platform. Similar work has been done by Ferreira\cite{ferreira2015design} without the use of actuators as is proposed in this project. Using the Stewart platform as a force sensor requires the actuators to be locked with zero degrees of freedom.
 
 Four strain gauges are required for each leg for a full Wheatstone bridge configuration.
 \begin{center}
@@ -398,7 +401,7 @@ Where V is the speed of the fluid, $P_{0}$ is the total, also called the stagnat
 The module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in figure \ref{fig:rs485}.
 The protocol allows for long distance serial communication and interface with multiple devices on the same bus.
 
-Three pitot probes are to be used in the wind tunnel i.e. in the test section, intake and diffuser sections.
+Three pitot probes were setup in the wind tunnel i.e. in the test section, intake and diffuser sections.
 \begin{center}
 	\begin{figure}[H]
 		\centering
@@ -416,7 +419,10 @@ This section looks at the required electrical connections to make the system fun
 This section looks at the design of the circuits used to power and get readings from the sensors and control the actuators.
 
 \subsubsection{Microcontroller}
-The main requirement for this is the need for wireless communication via WIFI and large number of I/O interface at cost effective rate. This brings down the options to the ESP32 and Raspberry Pi RP2040. Both are dual core devices which are feature rich however the raspberry rp2040 only has 28 I/O pins while the ESP32 has 34 pins and due to this the ESP32 was chosen.
+The main requirement for this was the need for wireless communication via WIFI and large number of I/O interface
+ at cost effective rate. This brought down the options to the ESP32 and Raspberry Pi RP2040. Both are dual core devices
+  which are feature rich. However, the raspberry rp2040 only has 28 I/O pins while the ESP32 has 34 pins and due to this
+   the ESP32 was chosen.
 \begin{center}
 	\begin{figure}[H]
 		\centering
@@ -447,7 +453,7 @@ Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end,
 The linear converter dissipates the energy loss though heat while buck converter is through switching.
 
 \subsubsection{Servo Control}
-Since the microcontroller used (ESP32) is based on 3.3V logic. There is a need for 5V logic to control the servos and thus a bidirectional logic level converter is utilized which leverages an internal drain N-channel MOSFET.
+Since the microcontroller used (ESP32) is based on 3.3V logic, there is a need for 5V logic to control the servos and thus a bidirectional logic level converter was utilized which leverages an internal drain N-channel MOSFET.
 \begin{center}
 	\begin{figure}[H]
 		\centering
@@ -460,9 +466,10 @@ The configuration designed is shown in figure \ref{fig:logik}
 
 \subsubsection{Force measurement Circuit}
 
-The output excitation of the Wheatstone bridge needs to be amplified as it results in low outputs. An analogue to digital converter is also required for the analogue to digital converter. Some considerable options are the HX711 or the AD7193 converters which may be used as digital to analogue converters. The AD7193 is designed for high precision and has a delta sigma filter to remove noise from measurements.  However, the AD7193 was not used due to it's high cost compared to the HX711 regardless of the advantage it offers with serial peripheral Interface communication allowing for multiple modules on the same bus.
+The output excitation of the Wheatstone bridge needs to be amplified as it results in low outputs. An analogue to digital converter is also required for the analogue to digital converter. Some considerable options were the HX711 or the AD7193 converters which may be used as digital to analogue converters. The AD7193 is designed for high precision and has a delta sigma filter to remove noise from measurements.  
+However, the AD7193 was not used due to it's high cost compared to the HX711 regardless of the advantage it offers with serial peripheral Interface communication allowing for multiple modules on the same bus.
 
-The connection of the AD7193 to the microcontroller will be via Serial Peripheral Interface (SPI). The configuration is as shown in figure \ref{spi}:
+The connection of the AD7193 to the microcontroller is via Serial Peripheral Interface (SPI). The configuration is as shown in figure \ref{spi}:
 \begin{center}
 	\begin{figure}[H]
 		\centering
@@ -473,7 +480,7 @@ The connection of the AD7193 to the microcontroller will be via Serial Periphera
 \end{center}
 In this configuration the when the chip select pin of an amplifier is set to low, the microcontroller is able to obtain data from that strain gauge. This configuration allows for a four wire interface to connect to six strain gauge sensors and obtain measurements.
 
-The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They however do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
+The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They, however, do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
 
 \subsection{Software and Control}
 This section deals with the control of the Stewart platform. It involves allowing input and obtaining output form the platform force balance.
