--- a/Final Report/Files/Acknowledgment.tex
+++ b/Final Report/Files/Acknowledgment.tex
@@ -5,6 +5,6 @@ particular Dr. Anthony K. Muchiri for the opportunity to work on the Stewart pla
 force balance project and with the low-speed wind tunnel at Fluids Lab. We also acknowledge
 the immense support of our supervisors i.e. Dr. Muchiri and Ms. Mourine
 Andanje as well as our technologist, Mr. Mbugua, towards the achievement of the project
-objectives.
+objectives. We also acknowledge the timely help of Mr. Tom Waka.
 
 
