--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -185,7 +185,42 @@ smoke rake as shown.
 	\caption[Final rake and pipe]{Smoke rake and pipe assembly and setup in the wind tunnel}%
 	\label{fig:result1}%
 \end{figure}
-
+\subsection{Model Testing}
+An aerodynamic model was subjected to wind tunnel testing and values of forces and moments were collected
+using the Stewart platform force balance. The tests were done at 0 angle of attack, and at a speed of 3m/s.
+The following results were obtained.
+\begin{figure}[!htb]%
+	\centering
+	\subfloat[\centering First run]{{\includegraphics[width=8cm]{Figures/Forces - first run.JPG} }}%
+	\qquad
+	\subfloat[\centering Second run]{{\includegraphics[width=8cm]{Figures/Forces-second run.png}}}
+	\caption[Force values for first and second run]{Force values for first and second run}%
+	\label{fig:result1}%
+\end{figure}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Figures/Forces third run.png}
+		\caption[Forces Third run]{Forces obtained form the third run}
+		\label{fig:pcb_fab}
+	\end{figure}
+\end{center}
+\begin{figure}[!htb]%
+	\centering
+	\subfloat[\centering First run]{{\includegraphics[width=8cm]{Figures/Moments_first_run.png} }}%
+	\qquad
+	\subfloat[\centering Second run]{{\includegraphics[width=8cm]{Figures/Moments_second_run.png}}}
+	\caption[Moment values for first and second run]{Moment values for first and second run}%
+	\label{fig:result1}%
+\end{figure}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Figures/Moments third run.png}
+		\caption[Moments from Third run]{Moments obtained form the third run}
+		\label{fig:pcb_fab}
+	\end{figure}
+\end{center}
 \subsection{Discussion}
 The Stewart platform is able to position models in various dynamic positions depending on the angle values
 of yaw, roll and pitch as well as the amount of displacements in the x-, y- and z-directions input via the HMI.
